--- a/trial_versions/v0.0.html
+++ b/trial_versions/v0.0.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <meta name ="viewport" content="with=device-width, initial-scale=1.0">
+    <title>Website Design - Trial</title>   
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph. Sup bitch</p>
-
+    <section class="header">
+        <nav>
+            <a href="index.html"><img src=images/logo.png></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">ABOUT</a></li>
+                    <li><a href="">BLOG</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+    </section>
 </body>
-</html>
+</html> 
