--- a/trial_versions/main.html
+++ b/trial_versions/main.html
@@ -4,7 +4,9 @@
     <meta name ="viewport" content="with=device-width, initial-scale=1.0">
     <title>Website Design - Trial</title>   
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="header">
