--- a/trial_versions/main.html
+++ b/trial_versions/main.html
@@ -32,6 +32,40 @@
         </div>
         
     </section>
+
+    <!-----Course----->
+    <section class="course">
+        <h1>Courses we offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto iusto eveniet at consequuntur accusantium soluta, hic deserunt officiis repellat perferendis reiciendis nesciunt labore culpa porro eius fugit laborum! Explicabo, esse?</p>
+
+        <div class="row">
+            <div class="course_col">
+                <h3>Intermediate</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illum libero obcaecati, ipsa adipisci, perspiciatis aliquam repellendus ab non assumenda velit animi? Reprehenderit quo labore blanditiis similique fugit repellendus cum.</p>
+            </div>
+            <div class="course_col">
+                <h3>Degree</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illum libero obcaecati, ipsa adipisci, perspiciatis aliquam repellendus ab non assumenda velit animi? Reprehenderit quo labore blanditiis similique fugit repellendus cum.</p>
+            </div>
+            <div class="course_col">
+                <h3>Post Graduation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt illum libero obcaecati, ipsa adipisci, perspiciatis aliquam repellendus ab non assumenda velit animi? Reprehenderit quo labore blanditiis similique fugit repellendus cum.</p>
+            </div>
+        </div>
+        
+    </section>   
+    <section class="campus">
+        <!---------Campus----------->
+        <h1>Global Campus</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum rerum ut, labore rem quae vel voluptate assumenda itaque, veniam, animi sapiente fugit. Modi delectus ad culpa unde tenetur quis sunt?</p>
+        <div class="row">
+            <div class="campus_col">
+                <img src="images/image2.jpg" alt="She's cute isn't she">
+            </div>
+        </div>
+    </section>
+
+
     <!------JavaScript Start ------>
     <script>
         var navlinks = document.getElementById("navlinks");
